--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.0.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+      - assets/images/MiEduRitmo_Negro.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
