--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   dio: ^5.0.0
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
+  fl_chart: ^0.69.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
