--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   fl_chart: ^0.69.0
   table_calendar: ^3.1.0
+  flutter_time_picker_spinner: ^2.0.0
 
   intl: ^0.19.0
   flutter_localizations:
